Package_Tools/include-C/Ubuntu_26.04/glib-2.0/gio/inarbeit/pas/gdbuserror.pas

unit gdbuserror;

interface

uses
  fp_glib2;

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ GDBus - GLib D-Bus Library
 *
 * Copyright (C) 2008-2010 Red Hat, Inc.
 *
 * SPDX-License-Identifier: LGPL-2.1-or-later
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General
 * Public License along with this library; if not, see <http://www.gnu.org/licenses/>.
 *
 * Author: David Zeuthen <davidz@redhat.com>
  }
{$ifndef __G_DBUS_ERROR_H__}
{$define __G_DBUS_ERROR_H__}
{$if !defined (__GIO_GIO_H_INSIDE__) && !defined (GIO_COMPILATION)}
{$error "Only <gio/gio.h> can be included directly."}
{$endif}
{$include <gio/giotypes.h>}
{*
 * G_DBUS_ERROR:
 *
 * Error domain for errors generated by a remote message bus.
 *
 * Errors in this domain will be from the [error@Gio.DBusError] enumeration.
 * See [type@GLib.Error] for more information on error domains.
 *
 * Note that this error domain is intended only for
 * returning errors from a remote message bus process. Errors
 * generated locally in-process (for example, by [class@Gio.DBusConnection])
 * should use the [error@Gio.IOErrorEnum] domain.
 *
 * Since: 2.26
  }

{ was #define dname def_expr }
function G_DBUS_ERROR : longint; { return type might be wrong }

function g_dbus_error_quark:TGQuark;cdecl;external libgio2;
{ Used by applications to check, get and strip the D-Bus error name  }
function g_dbus_error_is_remote_error(error:PGError):Tgboolean;cdecl;external libgio2;
function g_dbus_error_get_remote_error(error:PGError):Pgchar;cdecl;external libgio2;
function g_dbus_error_strip_remote_error(error:PGError):Tgboolean;cdecl;external libgio2;
{*
 * GDBusErrorEntry:
 * @error_code: an error code
 * @dbus_error_name: the D-Bus error name to associate with @error_code
 *
 * Struct used in [func@Gio.DBusError.register_error_domain].
 *
 * Since: 2.26
  }
type
  PGDBusErrorEntry = ^TGDBusErrorEntry;
  TGDBusErrorEntry = record
      error_code : Tgint;
      dbus_error_name : Pgchar;
    end;


function g_dbus_error_register_error(error_domain:TGQuark; error_code:Tgint; dbus_error_name:Pgchar):Tgboolean;cdecl;external libgio2;
function g_dbus_error_unregister_error(error_domain:TGQuark; error_code:Tgint; dbus_error_name:Pgchar):Tgboolean;cdecl;external libgio2;
procedure g_dbus_error_register_error_domain(error_domain_quark_name:Pgchar; quark_volatile:Pgsize; entries:PGDBusErrorEntry; num_entries:Tguint);cdecl;external libgio2;
{ Only used by object mappings to map back and forth to GError  }
function g_dbus_error_new_for_dbus_error(dbus_error_name:Pgchar; dbus_error_message:Pgchar):PGError;cdecl;external libgio2;
procedure g_dbus_error_set_dbus_error(error:PPGError; dbus_error_name:Pgchar; dbus_error_message:Pgchar; format:Pgchar; args:array of const);cdecl;external libgio2;
procedure g_dbus_error_set_dbus_error(error:PPGError; dbus_error_name:Pgchar; dbus_error_message:Pgchar; format:Pgchar);cdecl;external libgio2;
procedure g_dbus_error_set_dbus_error_valist(error:PPGError; dbus_error_name:Pgchar; dbus_error_message:Pgchar; format:Pgchar; var_args:Tva_list);cdecl;external libgio2;
function g_dbus_error_encode_gerror(error:PGError):Pgchar;cdecl;external libgio2;
{$endif}
{ __G_DBUS_ERROR_H__  }

// === Konventiert am: 26-6-26 16:43:12 ===


implementation


{ was #define dname def_expr }
function G_DBUS_ERROR : longint; { return type might be wrong }
  begin
    G_DBUS_ERROR:=g_dbus_error_quark;
  end;


end.
